AM_CPPFLAGS = -I$(top_srcdir)
TESTS = onehour.sh twolines.sh dst.sh twomonths.sh lastlinein.sh comments.sh unixcomment.sh getstatus
check_PROGRAMS = getstatus
getstatus_SOURCES = getstatus.c
getstatus_LDADD = $(top_builddir)/liblctp.a
EXTRA_DIST = onehour.sh twolines.sh onehour.dat twolines.dat dst.sh dst.dat twomonths.sh twomonths.dat lastlinein.sh lastlinein.dat comments.sh comments.dat unixcomment.sh unixcomment.dat
